# data_classes

./: README.md  pyproject.toml
notebooks/: dataclasses_exp.ipynb
src/: dataclass_examples.py  locustfile.py  server.py
